<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="add">Add</string>
    <string name="add_policy">Add Policy</string>
    <string name="add_record">Add Record</string>
    <string name="alias_base_record_header">ALIAS</string>
    <string name="alias_to_same_record">Alias to the same record</string>
    <string name="any_changes_will_be_lost">Any changes to the record will be lost.</string>
    <string name="app_desc">Access PasswordSafe databases on Android</string>
    <string name="app_name">PasswdSafe</string>
    <string name="at_least">At least</string>
    <string name="basic">Basic</string>
    <string name="canceled">Canceled</string>
    <string name="cannot_create_file">Cannot create file: %1$s</string>
    <string name="case_sensitive">Case sensitive</string>
    <string name="case_sensitive_sorting">Case-sensitive sorting</string>
    <string name="change_password">Change Password</string>
    <string name="choose">Choose</string>
    <string name="choose_group">Choose Group</string>
    <string name="choose_record">Choose Record</string>
    <string name="choose_type">Choose Type</string>
    <string name="clear">Clear</string>
    <string name="clear_all_saved_passwords">Clear all saved passwords</string>
    <string name="clear_clipboard_on_close">Clear clipboard on close</string>
    <string name="clear_password_notifications">Clear password notifications</string>
    <string name="clear_recent">Clear Recent</string>
    <string name="close_file">Close File</string>
    <string name="close_file_screen_off">Close file on screen off</string>
    <string name="confirm">Confirm</string>
    <string name="cannot_delete_record">Cannot delete record - %1$s</string>
    <string name="content_file">Content File</string>
    <string name="continue_str">Continue</string>
    <string name="continue_p">Continue?</string>
    <string name="copy_clipboard">Copy to Clipboard</string>
    <string name="copy_email">Copy Email</string>
    <string name="copy_notes">Copy Notes</string>
    <string name="copy_password">Copy Password</string>
    <string name="copy_password_warning">
        Warning: All apps can read the clipboard contents, and the clipboard
        cannot be reliably cleared.  The PasswdSafe alternate keyboard is a
        more secure method for entering passwords into other apps.
    </string>
    <string name="copy_url">Copy URL</string>
    <string name="copy_user">Copy User Name</string>
    <string name="created">Created</string>
    <string name="current">Current</string>
    <string name="custom_symbols">Custom Symbols</string>
    <string name="custom_symbol_not_alphanum">Custom symbols must not be alphanumeric or whitespace</string>
    <string name="database_policy">Database Policy - %s</string>
    <string name="database_version">Database version</string>
    <string name="days">Days</string>
    <string name="default_file_to_open">Default file to open</string>
    <string name="default_policy">Default Policy</string>
    <string name="default_symbols">Default symbols</string>
    <string name="default_symbols_empty_pref">Use an empty preference for default symbols: %1$s</string>
    <string name="delete">Delete</string>
    <string name="delete_file">Delete File</string>
    <string name="delete_file_msg">Delete file \"%1$s\"?</string>
    <string name="delete_policy">Delete Policy</string>
    <string name="delete_policy_msg">Delete policy \"%1$s\"?</string>
    <string name="delete_record_msg">Delete record \"%1$s\"?</string>
    <string name="directory_for_files">Directory for files</string>
    <string name="display">Display</string>
    <string name="done">Done</string>
    <string name="duplicate_entry">Duplicate entry</string>
    <string name="duplicate_name">Duplicate name</string>
    <string name="edit_item">Edit %s</string>
    <string name="edit_policy">Edit Policy</string>
    <string name="email">Email</string>
    <string name="email_attachment">Email Attachment</string>
    <string name="email_header">EMAIL</string>
    <string name="empty_custom_symbols">Empty custom symbols</string>
    <string name="empty_file_name">Empty file name</string>
    <string name="empty_name">Empty name</string>
    <string name="empty_password">Empty password</string>
    <string name="empty_title">Empty title</string>
    <string name="enable_expiration_notifications">Enable expiration notifications</string>
    <string name="enable">Enable</string>
    <string name="enabled">Enabled</string>
    <string name="erase_all_expiration_notifications">Erase all password expiration notifications and tracked files</string>
    <string name="erase_all_saved_passwords">Erase all saved passwords and keys</string>
    <string name="expiration">Expiration</string>
    <string name="expiration_notifications">Expiration Notifications</string>
    <string name="expiration_notifications_warning">Enabling expiration notifications requires PasswdSafe to store expiration information for the file (record title, group, and expiration date).  This information is stored unencrypted on the device.  No passwords are stored.</string>
    <string name="expired_password_notification">Expired password notification</string>
    <string name="expiring_password">Expiring password</string>
    <string name="ext_storage_not_mounted">External storage not mounted.  Please mount the storage to view files.</string>
    <string name="file_backups">File backups</string>
    <string name="file_close_timeout">File close timeout</string>
    <string name="file_exists">File exists</string>
    <string name="file">File</string>
    <string name="file_name">File Name</string>
    <string name="file_not_found_perm_denied">File not found or permission denied</string>
    <string name="file_open_help">
        File passwords can be saved on devices with a fingerprint scanner and
        Android 6.0 or higher.  The passwords are encrypted using AES-256
        keys that are protected by a fingerprint scan.
        \n
        - To save a password, first ensure a fingerprint is registered
        with the device in the security settings.  Then, check the save option,
        enter the password, and click OK. After the password is verified,
        scan a fingerprint when prompted. The password will be encrypted and
        saved, and the file will open.
        \n
        - To use a saved password, scan a fingerprint instead of entering a
        password.  If the scan is successful, the password is decrypted and
        used to open the file.  If a YubiKey is used, the key will be read
        after the fingerprint is scanned.
        \n
        - To remove a saved password, uncheck the save option and open the file.
        The saved password will be erased from the device.  All saved
        passwords can be removed from the password preferences.
        \n
        \nTo use a YubiKey NEO, follow these steps:\n
        - Enable NFC support in the device settings\n
        - Enter the user password to the file\n
        - Choose which slot on the YubiKey has the challenge-response key.
        Usually slot 2 is used for Password Safe.\n
        - Check the YubiKey option\n
        - Click OK\n
        - Within 30 seconds, press the YubiKey to the back of the phone or
        tablet.  There will be sounds as the key is being read.  If the device
        doesn\'t respond with a rising tone, try moving the key around.  A bit
        of trial-and-error is needed to find the correct location.  The button
        on the YubiKey itself does not need to be pressed.\n
        - Once the key is found, it will be used to authenticate with your
        password.  The file will open automatically.
    </string>
    <string name="file_operations">File Operations…</string>
    <string name="file_password_encoding">File password encoding</string>
    <string name="files">Files</string>
    <string name="fingerprint_not_recognized">Fingerprint not recognized</string>
    <string name="generate">Generate</string>
    <string name="generate_password">Generate Password</string>
    <string name="go">Go</string>
    <string name="go_to_shortcut">Goto</string>
    <string name="group">Group</string>
    <string name="group_cannot_start_with_dot">Group cannot start with a \'.\'</string>
    <string name="group_header">GROUP</string>
    <string name="group_records">Group records</string>
    <string name="help">Help</string>
    <string name="hidden_password_alias">***** (from alias, tap to show)</string>
    <string name="hidden_password_normal">***** (tap to show)</string>
    <string name="hidden_password_shortcut">***** (from shortcut, tap to show)</string>
    <string name="hide_password">Hide Password</string>
    <string name="hide_passwords">Hide Passwords</string>
    <string name="history">History</string>
    <string name="history_header">HISTORY</string>
    <string name="home">Home</string>
    <string name="interval">Interval</string>
    <string name="invalid_file_name">Invalid file name</string>
    <string name="invalid_history_max_size" tools:ignore="PluralsCandidate">Size must be between %1$d and %2$d</string>
    <string name="invalid_length">Invalid length</string>
    <string name="invalid_option_length">Invalid option length</string>
    <string name="invalid_password">Invalid password</string>
    <string name="key_error">Key error for %1$s: %2$s</string>
    <string name="key_not_found">Key not found for $1%s</string>
    <string name="kitkat_sdcard_warning">
        %1$s
        \n\nOn Android KitKat and higher, apps are prevented from writing to
        removable SD cards.  If the file is located on a card, it will have to
        be moved to the internal storage.
    </string>
    <string name="last_save_app">Last saved app</string>
    <string name="last_save_by">Last saved by</string>
    <string name="last_save_time">Last save time</string>
    <string name="legacy_file_chooser">Legacy file chooser</string>
    <string name="legacy_file_chooser_summary">Usable with Kitkat and higher</string>
    <string name="length">Length</string>
    <string name="length_even_hex">Length must be even for hexadecimal</string>
    <string name="length_min_val">Length must be at least %1$d</string>
    <string name="length_max_val">Length must be at most %1$d</string>
    <string name="loading_file">Loading %s…</string>
    <string name="location">Location</string>
    <string name="max_size">Maximum size</string>
    <string name="max_size_label">Maximum size:</string>
    <string name="menu">Menu</string>
    <string name="modified">Modified</string>
    <string name="monospace">Monospace</string>
    <string name="n_a">N/A</string>
    <string name="name">Name</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="new_box_file">New Box File</string>
    <string name="new_entry">New Entry</string>
    <string name="new_file">New File</string>
    <string name="new_dropbox_file">New Dropbox File</string>
    <string name="notes">Notes</string>
    <string name="password">Password</string>
    <string name="password_times_header">PASSWORD TIMES</string>
    <string name="passwords">Passwords</string>
    <string name="policy_header">POLICY</string>
    <string name="psafe3_ext">.psafe3</string>
    <string name="records">Records</string>
    <string name="record_sort_order">Record sort order</string>
    <string name="regular_expression">Regular expression</string>
    <string name="regular_expression_summary">Use a regular expression to search instead of a sub-string</string>
    <string name="search">Search</string>
    <string name="show_backup_files">Show backup files</string>
    <string name="show_password">Show Password</string>
    <string name="title">Title</string>
    <string name="username">User Name</string>
</resources>