<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (©) 2015 Jeff Harris <jefftharris@gmail.com>
  ~ All rights reserved. Use of the code is allowed under the
  ~ Artistic License 2.0 terms, as specified in the LICENSE file
  ~ distributed with this code, or available from
  ~ http://www.opensource.org/licenses/artistic-license-2.0.php
  -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="top_prefs">

    <PreferenceCategory android:key="fileOptions"
                        android:title="@string/files">

        <EditTextPreference
            android:name="FileDir Pref"
            android:key="fileDirPref"
            android:title="@string/directory_for_files"/>

        <Preference
            android:name="defaultFile Pref"
            android:key="defFilePref"
            android:title="@string/default_file_to_open"/>

        <ListPreference
            android:name="fileTimeout Pref"
            android:key="fileCloseTimeoutPref"
            android:title="@string/file_close_timeout"/>

        <CheckBoxPreference
            android:name="fileCloseScreenOff Pref"
            android:defaultValue="false"
            android:key="fileCloseScreenOffPref"
            android:title="@string/close_file_screen_off"/>

        <ListPreference
            android:name="fileBackup Pref"
            android:key="fileBackupPref"
            android:title="@string/file_backups"/>

        <CheckBoxPreference
            android:name="showBackupFiles Pref"
            android:defaultValue="false"
            android:key="showBackupFilesPref"
            android:title="@string/show_backup_files"/>

        <CheckBoxPreference
            android:name="fileCloseClearClipboard Pref"
            android:defaultValue="true"
            android:key="fileCloseClearClipboardPref"
            android:title="@string/clear_clipboard_on_close"/>

        <CheckBoxPreference
            android:name="fileLegacyFileChooser Pref"
            android:key="fileLegacyFileChooserPref"
            android:summary="@string/legacy_file_chooser_summary"
            android:title="@string/legacy_file_chooser"/>
    </PreferenceCategory>

    <PreferenceCategory android:key="passwordOptions"
                        android:title="@string/passwords">

        <ListPreference
            android:name="passwordEncoding Pref"
            android:key="passwordEncodingPref"
            android:title="@string/file_password_encoding"/>

        <ListPreference
            android:name="passwordExpiryNotify Pref"
            android:key="passwordExpiryNotifyPref"
            android:title="@string/expired_password_notification"/>

        <EditTextPreference
            android:key="passwordDefaultSymbolsPref"
            android:title="@string/default_symbols"/>

        <Preference
            android:key="passwordClearAllNotifsPref"
            android:summary="@string/erase_all_expiration_notifications"
            android:title="@string/clear_password_notifications"/>

        <Preference
            android:selectable="false"
            android:summary="@string/password_gen_prefs_moved"
            android:title="@string/password_generation"/>

    </PreferenceCategory>

    <PreferenceCategory android:key="recordOptions"
                        android:title="@string/records">

        <CheckBoxPreference
            android:name="sortCaseSensitive Pref"
            android:defaultValue="true"
            android:key="sortCaseSensitivePref"
            android:title="@string/case_sensitive_sorting"/>

        <CheckBoxPreference
            android:name="groupRecords Pref"
            android:defaultValue="true"
            android:key="groupRecordsPref"
            android:title="@string/group_records"/>

        <ListPreference
            android:name="recordSortOrder Pref"
            android:key="recordSortOrderPref"
            android:title="@string/record_sort_order"/>

    </PreferenceCategory>

    <PreferenceCategory android:key="searchOptions"
                        android:title="@string/search">

        <CheckBoxPreference
            android:name="searchCaseSensitive Pref"
            android:defaultValue="false"
            android:key="searchCaseSensitivePref"
            android:title="@string/case_sensitive"/>

        <CheckBoxPreference
            android:name="searchRegex Pref"
            android:defaultValue="false"
            android:key="searchRegexPref"
            android:summary="@string/regular_expression_summary"
            android:title="@string/regular_expression"/>

        </PreferenceCategory>

</PreferenceScreen>
