<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (©) 2015 Jeff Harris <jefftharris@gmail.com>
  ~ All rights reserved. Use of the code is allowed under the
  ~ Artistic License 2.0 terms, as specified in the LICENSE file
  ~ distributed with this code, or available from
  ~ http://www.opensource.org/licenses/artistic-license-2.0.php
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_copy_user"
          android:title="@string/copy_user"/>

    <item android:id="@+id/menu_copy_password"
          android:title="@string/copy_password"/>

    <item android:id="@+id/menu_copy_url"
          android:title="@string/copy_url"/>

    <item android:id="@+id/menu_copy_email"
          android:title="@string/copy_email"/>

    <item android:id="@+id/menu_toggle_password"
          android:title="@string/show_password"/>

</menu>
