<!--
  ~ Copyright (©) 2015 Jeff Harris <jefftharris@gmail.com>
  ~ All rights reserved. Use of the code is allowed under the
  ~ Artistic License 2.0 terms, as specified in the LICENSE file
  ~ distributed with this code, or available from
  ~ http://www.opensource.org/licenses/artistic-license-2.0.php
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.jefftharris.passwdsafe.PasswdSafeRecordPasswordFragment">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="6dp"
                  android:orientation="vertical">

        <LinearLayout android:id="@+id/policy_row"
                      style="@style/RecordRow">

            <TextView style="@style/RecordHeader"
                      android:text="@string/policy_header"/>

            <View style="@style/Separator"/>

            <com.jefftharris.passwdsafe.view.PasswdPolicyView
                android:id="@+id/policy"
                style="@style/RecordField"/>

        </LinearLayout>

        <LinearLayout android:id="@+id/password_times_row"
                      style="@style/RecordRow">

            <TextView style="@style/RecordHeader"
                      android:text="@string/password_times_header"/>

            <View style="@style/Separator"/>

            <TableLayout android:id="@+id/password_times"
                         style="@style/RecordField.Small"
                         android:shrinkColumns="1"
                         android:stretchColumns="1">

                <TableRow android:id="@+id/expiration_time_row">

                    <TextView style="@style/TableLabelColumn"
                              android:text="@string/expiration"/>

                    <TextView android:id="@+id/expiration_time"
                              android:layout_width="wrap_content"/>
                </TableRow>

                <TableRow android:id="@+id/expiration_interval_row">

                    <TextView style="@style/TableLabelColumn"
                              android:text="@string/interval"/>

                    <TextView android:id="@+id/expiration_interval"
                              android:layout_width="wrap_content"/>
                </TableRow>

                <TableRow android:id="@+id/password_mod_time_row">

                    <TextView style="@style/TableLabelColumn"
                              android:text="@string/modified"/>

                    <TextView android:id="@+id/password_mod_time"
                              android:layout_width="wrap_content"/>
                </TableRow>

            </TableLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>

