<!--
  ~ Copyright (©) 2015 Jeff Harris <jefftharris@gmail.com>
  ~ All rights reserved. Use of the code is allowed under the
  ~ Artistic License 2.0 terms, as specified in the LICENSE file
  ~ distributed with this code, or available from
  ~ http://www.opensource.org/licenses/artistic-license-2.0.php
  -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.jefftharris.passwdsafe.PasswdSafeOpenFileFragment">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <TextView android:id="@+id/title"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/new_file"
                  android:textAppearance="?android:attr/textAppearanceLarge"/>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">
            <EditText android:id="@+id/file_name"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="fill_horizontal"
                      android:hint="@string/file_name"
                      android:inputType="textNoSuggestions"
                      android:scrollHorizontally="true"
                      android:singleLine="true"
                      android:text="@string/psafe3_ext"
                      android:textAppearance="?android:attr/textAppearanceMedium">
                <requestFocus/>
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">
            <EditText android:id="@+id/password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="fill_horizontal"
                      android:hint="@string/password"
                      android:inputType="textPassword"
                      android:scrollHorizontally="true"
                      android:singleLine="true"
                      android:textAppearance="?android:attr/textAppearanceMedium">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                       android:layout_height="wrap_content">
            <EditText android:id="@+id/password_confirm"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:gravity="fill_horizontal"
                      android:hint="@string/confirm"
                      android:imeOptions="actionGo"
                      android:inputType="textPassword"
                      android:scrollHorizontally="true"
                      android:singleLine="true"
                      android:textAppearance="?android:attr/textAppearanceMedium">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <View style="@style/Separator.Light"/>

        <TextView android:id="@+id/error_msg"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"/>

        <ProgressBar android:id="@+id/progress"
                     style="?android:attr/progressBarStyleHorizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:indeterminate="true"/>

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal">

            <Button android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@android:string/cancel"/>

            <Button android:id="@+id/ok"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@android:string/ok"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
